# FinanceAPI

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  python-package.yml
src/finance_api/: __init__.py  __main__.py  base.py
src/finance_api/database/: __init__.py  account.py  base.py  category.py  parent_category.py  transaction.py
src/finance_api/router/: __init__.py  account.py
