[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_api"
version = "0.1.0"
authors = [
  { name = "Tobias Ahlers", email = "93325697+TobiasAhlers@users.noreply.github.com" },
]
description = "A simple API for managing personal finances."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["datamodel_router", "uvicorn"]

[project.urls]
Homepage = "https://github.com/TobiasAhlers/FinanceAPI/"
Issues = "https://github.com/TobiasAhlers/FinanceAPI/issues"
